# Vital

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_Space.md  Start_Vital.bat  app.py  install.bat  pyproject.toml  requirements.txt  space_app.py
core/: __init__.py  app_config.py  daily_greeting.py  daily_startup.py  notifications.py  personalization.py  presence.py  scheduler.py  tts.py  weather.py  weekly_startup.py
db/: __init__.py  database.py  models.py  queries.py
infra/: vllm_serve.py
llm/: __init__.py  briefing.py  chat_helpers.py  client.py  config.py  daily_schedule.py  onboarding.py  onboarding_flow.py  system_prompt.py  tool_runner.py  tools.py  weekly_report.py
scripts/: clear_daily_schedules.py  eval_llm.py  generate_weekly_report.py  test_presence_local.py  test_tts_local.py
tests/: smoke.py  test_chat_helpers.py  test_core_smoke.py  test_daily_greeting.py  test_daily_schedule.py  test_db_smoke.py  test_llm_smoke.py  test_onboarding.py  test_personalization.py  test_weekly_report.py
ui/: app_ui.py  coach.py  dashboard.py  movement.py  nutrition.py  onboarding.py  report.py  settings.py  theme.py
vital_types/: __init__.py  core.py  daily_plan.py  db.py  llm.py  onboarding.py  settings_prefs.py
