[project]
name = "vital"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "gradio>=6.17.3",
    "huggingface-hub>=1.18.0",
    "kokoro>=0.9.2",
    "modal>=1.4.3",
    "openai>=1.76.0",
    "numpy>=2.0.0",
    "opencv-python>=4.13.0.92",
    "plyer>=2.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.0",
    "sqlalchemy>=2.0.50",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
